--- a/WebCoreProjesi/Views/Account/Profile.cshtml
+++ b/WebCoreProjesi/Views/Account/Profile.cshtml
@@ -8,9 +8,23 @@
 		</div>
 </div>
 <hr />
-<div class="row">
-	<div class="col-4">
+<div class="row" >
+   
+	<div class="col-3">
+		<form method="post" action="ProfilResimKaydet" enctype="multipart/form-data">
+            <div class="text-center">
+                <img src="~/image/@ViewData["resim"]" class="img-thumbnail rounded-circle w-100 h-200" />
+
+			</div>
+			<div class="input-group mb-3">
+				<input name="resim" type="file" class="form-control">
+				<button class="btn btn-outline-secondary" type="submit" id="button-addon2">Kaydet</button>
+			</div>
+		</form>
+	</div>
+	<div class="col-6 offset-sm-2">
 		<div>
+			<input type="hidden" value="@ViewData["mesaj"]" id="mesaj" />
 			<div asp-validation-summary="All" class="text-danger"></div>
 		</div>
 
@@ -35,19 +49,32 @@
 			</div>
 		</form>
 
-		<form method="post">
+		<form method="post" action="EmailKaydet">
 			<div class="input-group mb-3">
-				<input type="text" class="form-control" placeholder="Email" value="@ViewData["email"]">
+				<input name="Email"type="text" class="form-control" placeholder="EmailKaydet" value="@ViewData["email"]">
 				<button class="btn btn-outline-secondary" type="submit" id="button-addon2">Kaydet</button>
 			</div>
 		</form>
 
-		<form method="post">
+		<form method="post" action="SifreKaydet">
 			<div class="input-group mb-3">
-				<input type="password" class="form-control" placeholder="Şifre" value="@ViewData["şifre"]">
+				<input name="sifre"type="password" class="form-control" placeholder="ŞifreKaydet" value="@ViewData["şifre"]">
 				<button class="btn btn-outline-secondary" type="submit" id="button-addon2">Kaydet</button>
 			</div>
 		</form>
 
 	</div>
 </div>
+@section Scripts{
+	
+		@if (ViewData["mesaj"] != null)
+		{
+		
+			<script>
+				var mesaj=$("#mesaj").val();
+			toastr["info"](mesaj, "")
+			</script>
+		}
+		
+	
+}
